...
    <string name="profile_createform_email">Adres e-mail</string>
    <string name="profile_createform_pin">Kod PIN</string>
    <string name="profile_createform_initialBalance">Saldo początkowe (domyślnie: 0)</string>
    <string name="prof_alertDialog_addProfile">Utwórz profil</string>
    <string name="prof_toast_createSuccessful_true">"Profil został utworzony."</string>
    <string name="prof_toast_createSuccessful_false">Nie udało się stworzyć profilu.</string>
    <string name="profile_editform_submit_name">Zmień nazwę profilu</string>
    <string name="profile_editform_submit_email">Zmień adres e-mail</string>
    <string name="profile_editform_text_oldPIN">Obecny kod PIN</string>
    <string name="profile_editform_text_newPIN">Nowy kod PIN</string>
    <string name="profile_editform_text_newPIN_confirm">Potwiedź nowy kod PIN</string>
    <string name="profile_editform_submit_PIN">Zmień kod PIN</string>
    <string name="profile_createform_submitProfile">Utwórz profil</string>
    <string name="profile_editform_submit_deleteProfile">Usuń profil</string>
    <string name="profile_editform_email">Nowy adres e-mail</string>
    <string name="profile_editform_name">Nowa nazwa profilu</string>
    <string name="profile_loginform_info_login">Logowanie</string>
    <string name="profile_createform_text_pin_confirm">Powtórz kod PIN</string>
    <string name="profile_editform_info_login">Edycja profilu</string>
    <string name="profile_createform_info_login">Tworzenie profilu</string>
    <string name="title_activity_menu">Menu główne</string>
    <string name="profile_loginform_predelete_info">Wpisz kod PIN, aby potwierdzić operację usunięcia profilu</string>
    <string name="profile_loginform_predelete_button_login">Usuń profil</string>
    <string name="profile_createform_button_nextstage">Dalej</string>
    <string name="profile_createform_text_helperquestion_answer">Odpowiedź na pytanie pomocnicze</string>
    <string name="profile_createform_text_helperquestion_question">Pytanie pomocniczne</string>
    <string name="profile_createform_info_helperquestion">Ustawianie pytania pomocniczego</string>
    <string name="profile_remindPIN_submitRemind">Przypomnij kod PIN</string>
    <string name="profile_showPIN_info_helperquestion">Przypomnienie kodu PIN</string>
    <string name="profile_remindPIN_info_helperquestion">Przypomnienie kodu PIN</string>
    <string name="profile_showPIN_submitRemind">Zakończ</string>
    <string name="profile_empty_text">Jak widzisz, nie ma tutaj żadnego profilu, stwórz go!</string>
    <string name="profile_editform_text_newHelperQuestion">Nowe pytanie pomocnicze</string>
    <string name="profile_editform_text_newHelperAnswer">Odpowiedź na nowe pytanie pomocnicze</string>
    <string name="profile_editform_submit_QandA">Zmień pytanie i odpowiedź pomocniczą</string>
    <string name="profile_fab_tooltip_addProfile">Utwórz profil</string>
    <string name="mainmenu_addIncome_button">Dodaj przychód</string>
    <string name="mainmenu_addExpense_button">Dodaj wydatek</string>
    <string name="mainmenu_finMgmt_button">Zarządzanie finansami</string>
    <string name="mainmenu_addReceipt_button">Dodaj paragon</string>
    <string name="mainmenu_addShoppingList_button">Dodaj listę zakupów</string>
    <string name="mainmenu_shoppingLists_button">Listy zakupów</string>
    <string name="mainmenu_profiles_button">Wyloguj się</string>
    <string name="mainmenu_settings_button">Ustawienia</string>
    <string name="mainmenu_receiptsList_button">Paragony</string>
    <string name="prof_rc_secondLine">Description</string>
    <string name="prof_rc_firstLine">Example</string>
    <string name="expcat_rc_name">Example</string>
    <string name="expcat_empty_text">Jak widzisz, nie ma tutaj żadnej kategorii, stwórz ją!</string>
    <string name="expcat_editform_info_edit">Edycja<br /> kategorii wydatków</string>
    <string name="expcat_editform_text_name">Nowa nazwa kategorii wydatków</string>
    <string name="expcat_editform_submit">Zmień nazwę kategorii wydatków</string>
    <string name="expcat_create_info_login">Tworzenie<br /> kategorii wydatków</string>
...
    <string name="set_edit_balance_edit_balance">Saldo</string>
    <string name="set_edit_balance_submit">Resetuj saldo</string>
    <string name="receipt_edit_menu_recognizeDataFromReceipt">Odczytaj tekst z paragonu</string>
    <string name="receipt_editData_form_text_data">Treść paragonu</string>
    <string name="receipt_editAttributes_info">Edycja treści paragonu</string>
    <string name="receipt_editData_form_submit">Edytuj treść paragonu</string>
    <string name="profile_createprofile_name_error_existingName">Istnieje już profil z podaną nazwą.</string>
    <string name="profile_createprofile_pin_error_passwordMismatch">Podane kody PIN nie są identyczne.</string>
    <string name="profile_createprofile_pin_error_empty">Podaj kod PIN.</string>
    <string name="profile_createprofile_pin_error_insufficientChars">Kod PIN musi składać się z 6 cyfr.</string>
    <string name="profile_createprofile_name_error_empty">Podaj nazwę profilu.</string>
    <string name="profile_createprofile_currency_error_tooMuchChars">Waluta musi składać się maksymalnie z czterech liter.</string>
    <string name="profile_createprofile_question_error_empty">Podaj pytanie pomocnicze.</string>
    <string name="profile_createprofile_answer_error_empty">Podaj odpowiedź na pytanie pomocnicze.</string>
    <string name="profile_createprofile_question_error_syntax">Pytanie pomocnicze powinno składać się z co najmniej dwóch liter. Na końcu musi znajdować się znak zapytania.</string>
    <string name="profile_loginform_predelete_info_delete">Wpisz kod PIN, aby potwierdzić<br /> operację usunięcia profilu.</string>
    <string name="budget_createbudget_initialAmount_error_empty">Podaj wysokość budżetu.</string>
    <string name="budget_createbudget_date_error_startDateAfterEndDate">Data rozpoczęcia okresu rozliczeniowego nie może być późniejsza niż jego zakończenie.</string>
    <string name="budget_createbudget_date_error_startDateBeforeOtherBudgetsEndDate">Okres rozliczeniowy nie może rozpoczynać się przed zakończeniem innego okresu rozliczeniowego.</string>
    <string name="budget_createbudget_date_error_endDateWhileOtherBudgetIsRunning">Okres rozliczeniowy nie może zakończyć się w trakcie innego okresu rozliczeniowego.</string>
    <string name="budget_createbudget_date_error_otherBudgetIsExistingBetweenStartAndEndDate">Istnieje już okres rozliczeniowy pomiędzy podaną datą rozpoczęcia i zakończenia okresu rozliczeniowego.</string>
...
