...
        android:textStyle="bold"
        android:text="@string/profile_createform_info_login"
        android:singleLine="true" >
    </TextView>

    <EditText
        android:id="@+id/profile_createform_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:maxLength="20"
...
        android:hint="@string/profile_createform_name"
        android:singleLine="true" >
        <requestFocus/>
    </EditText>

    <EditText
        android:id="@+id/profile_createform_text_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profile_createform_text_name"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
...
        android:drawableStart="@drawable/baseline_pin_24"
        android:drawablePadding="10dp"
        android:hint="@string/profile_createform_text_pin_confirm"
        android:singleLine="true" />

    <EditText
        android:id="@+id/profile_createform_text_initialBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profile_createform_text_pin_confirm"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
...
        android:drawableStart="@drawable/baseline_account_balance_24"
        android:drawablePadding="10dp"
        android:hint="@string/profile_createform_initialBalance"
        android:singleLine="true" />

    <EditText
        android:id="@+id/profile_createform_text_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profile_createform_text_initialBalance"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
...
