...
        android:textSize="20sp"
        android:textStyle="bold"
        android:singleLine="true" >
    </TextView>

    <EditText
        android:id="@+id/profile_loginform_text_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profile_loginform_text_name"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
...
        android:drawablePadding="10dp"
        android:hint="@string/profile_createform_pin"
        android:singleLine="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/profile_loginform_link_remindPIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
...
        android:layout_below="@+id/profile_loginform_text_pin"
        android:text="Przypomnij hasło"
        android:singleLine="true" >
    </TextView>

    <Button
        android:id="@+id/profile_loginform_button_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/profile_loginform_link_remindPIN"
        android:layout_margin="20dp"
        android:text="Zaloguj" />
...
