...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context="pl.dchruscinski.pilnujgrosza.Profile">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_list_rc"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- FAB - "Dodaj profil / Add profile" -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profile_fab_addProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/flat_plus_background"
        app:tint="@null"
...
